# fastapi-vue3-oauth-example

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  main.py  users.py
frontend/: .env.example  index.html  package-lock.json
frontend/src/: App.vue
frontend/src/components/: GoogleAuthButton.vue  GoogleAuthenticationButton.vue
frontend/src/composables/: useFastAPIUsersOAuth.js
frontend/src/views/: AboutView.vue  HomeView.vue
