[tool.poetry]
name = "fastapi-vue3-oauth-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^12.1.2"}
aiosqlite = "^0.19.0"
bcrypt = "4.0.1"
loguru = "^0.7.2"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
